# document_simulator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  ENVIRONMENT_AUDIT_REPORT.md  LICENSE  Makefile  README.md  RESEARCH_FINDINGS.md  SETUP_COMPLETE.md  SETUP_INSTRUCTIONS.md  docker-compose.yml  packages.txt  pyproject.toml  setup.sh
.claude/commands/: idea.md  update-fdd.md
.github/workflows/: bpy-smoke.yml  deploy-hf.yml  deploy_hf_spaces.yml  preview-deploy.yml
.streamlit/: config.toml  secrets.toml.example
data/hdri/: README.md
docs/: IMPLEMENTATION_PLAN.md  PHOTOREALISTIC_RECEIPT_PIPELINE.md  PHOTOREALISTIC_RECEIPT_PIPELINE_RAW_RESEARCH.md  PHOTOREAL_RECEIPT_UI_DESIGN.md  PLAN.md  RESEARCH_FINDINGS.md  UI_PLAN.md  coordinate-tracking-design.md  deployment.md  environment-setup.md  hosting-options.md
docs/features/: README.md  feature_augmentation_lab_catalogue.md  feature_augmentation_presets.md  feature_augmentation_ui_perceptual_language.md  feature_augraphy_full_catalogue.md  feature_batch_processing.md  feature_cli.md  feature_document_augmenter.md  feature_document_dataset.md  feature_evaluation.md  feature_free_hosting_deployment.md  feature_ground_truth.md  feature_hf_spaces_deployment.md  feature_image_io.md  feature_js_zone_editor_ui.md  feature_llm_schema_extraction.md  feature_migrate_streamlit_to_react.md  feature_multi_template_batch.md  feature_ocr_engine.md  feature_ocr_metrics.md  feature_photoreal_receipt_synthesis.md  feature_receipt_synthesis_3d.md  feature_receipt_synthesis_react_ui.md  feature_rl_environment.md  feature_rl_trainer.md  feature_robust_ground_truth_bundling.md  feature_synthetic_document_generator.md  feature_synthetic_generator_zones_perf.md  feature_template.md  feature_ui_augmentation_lab.md  feature_ui_batch_processing.md  feature_ui_components.md  feature_ui_evaluation_dashboard.md  feature_ui_ocr_engine.md  feature_ui_rl_training.md  feature_variable_length_templates.md
scripts/: build_hdri_thumbnails.py  deploy_to_hf_spaces.py
src/document_simulator/: __init__.py  __main__.py  cli.py  config.py
src/document_simulator/api/: __init__.py  __main__.py  app.py  jobs.py  models.py
src/document_simulator/api/routers/: augmentation.py  batch.py  evaluation.py  ocr.py  receipt_synthesis.py  rl_training.py  synthesis.py
src/document_simulator/augmentation/: __init__.py  augmenter.py  batch.py  catalogue.py  presets.py
src/document_simulator/data/: __init__.py  datasets.py  ground_truth.py
src/document_simulator/evaluation/: __init__.py  evaluator.py
src/document_simulator/ocr/: __init__.py  engine.py  metrics.py
src/document_simulator/rl/: __init__.py  environment.py  optimizer.py  trainer.py
src/document_simulator/synthesis/: __init__.py  annotation.py  batch_integrity.py  document_template.py  field_schema.py  fonts.py  generator.py  ground_truth_writer.py  pdf_writer.py  renderer.py  sampler.py  schema_extractor.py  sections.py  template.py  template_registry.py  zones.py
src/document_simulator/synthesis/receipts/: __init__.py  augraphy_pretreat.py  content.py  overlay.py  persist.py  render.py  schema.py
src/document_simulator/synthesis/templates/: __init__.py  receipt_a4.py  (+1 more)
src/document_simulator/ui/: __init__.py  app.py
src/document_simulator/utils/: __init__.py  image_io.py
tests/: __init__.py  test_augmentation.py  test_batch_processing.py  test_datasets.py  test_deployment.py  test_evaluation.py  test_ground_truth.py  test_rl_env.py  test_rl_training.py
tests/api/: conftest.py  test_augmentation_router.py  test_batch_router.py  test_config_schema_endpoint.py  test_generate_endpoint.py  test_health.py  test_ocr_router.py  test_preview_endpoint.py  test_schema_extraction_router.py  test_template_endpoint.py
tests/api/routers/: test_receipt_synthesis.py
tests/augmentation/: test_catalogue.py
tests/e2e/: test_cli.py
tests/integration/: test_augmentation_ocr.py
tests/synthesis/: test_annotation.py  test_batch_integrity.py  test_field_schema.py  test_fonts.py  test_generator.py  test_generator_gt.py  test_ground_truth_writer.py  test_renderer.py  test_sampler.py  test_schema_enhancements.py  test_schema_extractor.py  test_template.py  test_variable_templates.py  test_zones.py
tests/synthesis/receipts/: test_augraphy_pretreat.py  test_bbox_projector_camera_fx.py  test_bbox_projector_clip.py  test_bbox_projector_curved.py  test_bbox_projector_full_chain.py  test_bbox_projector_round_trip.py  test_bbox_projector_subdivide.py  test_bbox_projector_uv_to_world.py  test_bbox_projector_visibility.py  test_bbox_projector_world_to_camera.py  test_content_faker.py  test_overlay.py  test_persist.py  test_render.py  test_scene_builder.py  test_scene_mesh.py  test_scene_render.py  test_scene_sidecar.py  test_schema.py  test_templates.py
tests/ui/: conftest.py
tests/ui/e2e/: test_full_flow.py
tests/ui/integration/: test_augmentation_lab.py  test_augmentation_lab_catalogue.py  test_batch_processing.py  test_evaluation.py  test_multi_template_batch_ui.py  test_ocr_engine_page.py  test_rl_training.py  test_synthetic_generator.py
tests/ui/unit/: test_file_uploader.py  test_image_display.py  test_metrics_charts.py  test_session_state.py  test_zones_perf.py
tests/unit/: test_augmentation_custom.py  test_image_handlers.py  test_metrics.py  test_multi_template_batch.py  test_presets.py
webapp/: index.html  package-lock.json  package.json
webapp/src/: App.tsx  SyntheticGenerator.tsx
webapp/src/api/: client.ts
webapp/src/components/: BatchGeneratePanel.tsx  ConfigPanel.tsx  FontSelect.tsx  InkColorPicker.tsx  NavBar.tsx  PreviewGallery.tsx  RespondentPanel.tsx  StatusBar.tsx  ZoneCanvas.tsx  ZoneList.tsx
webapp/src/hooks/: useGenerate.ts  usePreviews.ts  useReceiptSynthesis.ts  useRespondents.ts  useTemplate.ts  useZonePreview.ts  useZones.ts
webapp/src/pages/: AugmentationLab.tsx  BatchProcessing.tsx  Evaluation.tsx  OcrEngine.tsx  ReceiptSynthesis.tsx  RlTraining.tsx  SchemaExtraction.tsx
webapp/src/types/: index.ts
webapp/src/utils/: colors.ts  faker.ts
(+41 files in other folders)
